--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>ES2015 test</title>
 </head>
 <body>
-    <script src="/public/assets/js/bundle.js"></script>
+    <h1>Color</h1>
+    <section id="color"></section>
+    <button id="button">Button</button>
 </body>
 </html>
