--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     <h1>Color</h1>
     <section id="color"></section>
     <button id="button">Button</button>
-    <p>dasd</p>
+    <div id="example"></div>
 </body>
 </html>
